# ModelForge-FastAPI-platform-for-serving-ML-models

./: .env.example  .gitignore  README.md  RUN_INSTRUCTIONS.md  alembic.ini  fastapi_ml_platform_plan.md  phase_1_configuration_and_secrets_management.md  phase_2_database_layer.md  pyproject.toml
alembic/: env.py
alembic/versions/: 8b49328e9074_create_initial_tables.py
app/: main.py
app/api/: deps.py
app/core/: config.py  exceptions.py
app/db/: base.py
app/models/: __init__.py  ml_model.py  prediction_log.py  user.py
tests/unit/: test_config.py
