[tool.poetry]
name = "ml-platform"
version = "1.0.0"
description = "FastAPI ML Model Serving Platform"
authors = ["Muhammad Hamza hhamza@gmail.com"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.135.2"
uvicorn = {extras = ["standard"], version = "0.42.0"}
sqlalchemy = {extras = ["asyncio"], version = "2.0.48"}
asyncpg = "0.31.0"
alembic = "1.18.4"
pydantic-settings = "2.13.1"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
redis = "7.4.0"
httpx = "0.28.1"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
ruff = "0.15.7"
mypy = "1.19.1"
aiofiles = "25.1.0"
python-multipart = "0.0.22"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.7"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
